# cratesql

./: .env  .gitignore  Cargo.toml  README.md  setup.sh
src/: main.rs  schema.rs
