[package]
name = "cratesql"
version = "0.1.0"
authors = ["Ferran Basora <fcsonline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.9.0"
env_logger = "0.6"
futures = "0.1"
juniper = "0.15.3"
juniper_actix = "0.2.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
